syntax = "proto3";

package AuthenticationPackage;

message SignUpRequest {
    required string email = 1;
    required string password = 2;
    required string clientId = 3;
    string phone = 4;
}

message SignInRequest {
    required string email = 1;
    required string password = 2;
    required string clientId = 3;
}

message ChangePasswordRequest {
    required string email = 1;
    required string oldPassword = 2;
    required string newPassword = 3;
}

message ForgetPasswordRequest {
    required string email = 1;
}

message ResetPasswordRequest {
    required string email = 1;
    required string otp = 2;
    required string newPassword = 3;
}

message SendEmailVerificationRequest {
    required string email = 1;
}

message VerifyEmailRequest {
    required string email = 1;
    required string otp = 2;
}

message TokenRequest {
    required string token = 1;
}

message ValidateOTPRequest {
    required string email = 1;
    required string otp = 2;
}

message SignOutRequest {
    required string accountId = 1;
    required string clientId = 2;
}

message DeleteRequest {
    required string id = 1;
}

message DeviceObject {
    string clientId = 1;
}

message DevicesListObject {
    repeated DeviceObject devices = 1;
}

message AccountObject {
    string id = 1;

    string email = 2;
    bool isEmailVerified = 3;

    string phone = 4;
    bool isPhoneVerified = 5;

    string createdAt = 7;
    string updatedAt = 8;
}

message TokenObject {
    string access = 1;
    string refresh = 2;
}

message EmptyObject {}

message AuthenticationResponse {
    AccountObject account = 1;
    TokenObject token = 2;
}

service Authentication {
    // Authentication
    rpc SignUp (SignUpRequest) returns (AuthenticationResponse) {}
    rpc SignIn (SignInRequest) returns (AuthenticationResponse) {}

    // Read
    rpc ListDevices (EmptyObject) returns (DevicesListObject) {}

    // Update
    rpc ChangePassword (ChangePasswordRequest) returns (EmptyObject) {}
    rpc ForgetPassword (ForgetPasswordRequest) returns (EmptyObject) {}
    rpc ResetPassword (ResetPasswordRequest) returns (EmptyObject) {}
    rpc SendEmailVerification (SendEmailVerificationRequest) returns (EmptyObject) {}
    rpc VerifyEmail (VerifyEmailRequest) returns (EmptyObject) {}

    // Validate
    rpc ValidateAccessToken (TokenRequest) returns (EmptyObject) {}
    rpc ValidateOTP (ValidateOTPRequest) returns (EmptyObject) {}

    // Revocation
    rpc RefreshToken (TokenRequest) returns (TokenObject) {}
    rpc SignOut (SignOutRequest) returns (EmptyObject) {}
    rpc DeleteAccount (DeleteRequest) returns (AccountObject) {}
}